# sandbox-rust-torch

./: .env  Cargo.toml  Dockerfile  Dockerfile-alphineLegacy  docker-compose.yml  readme.md
src/: cfg.rs  lib.rs  main.rs  nn.rs
