[package]
name = "sandbox_rust_torch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
tch =  "0.17.0"
async-nats = "0.38.0"
bytes = "1.9.0"
futures = "0.3.31"
image = "0.25.5"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4","fast-rng","macro-diagnostics"]}



